--- a/store.html
+++ b/store.html
@@ -1,1 +1,97 @@
 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>YardOS — Store View</title>
+  <link rel="stylesheet" href="./styles.css"/>
+</head>
+<body>
+  <header class="topbar">
+    <div class="wrap">
+      <div class="brand">
+        <img id="logo" alt="Tek-Pak" />
+        <span class="badge">Store View</span>
+      </div>
+      <nav class="nav">
+        <a href="./index.html">Dashboard</a>
+        <a href="./inventory.html">Inventory</a>
+        <a href="./ebay.html">eBay Tools</a>
+        <a class="active" href="./store.html">Store</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <div class="card">
+      <div class="hd">
+        <div>
+          <h2>Storefront (Internal View)</h2>
+          <div class="sub">Shows sellable items only: AVAILABLE + LISTED</div>
+        </div>
+      </div>
+      <div class="bd">
+        <div class="controls">
+          <select class="select" id="tabSel">
+            <option value="Inventory_Retail">Retail</option>
+            <option value="Inventory_Parts">Parts</option>
+          </select>
+          <input class="input" id="q" placeholder="Search title / sku / model…" />
+          <button class="btn primary" id="btnLoad">Load</button>
+        </div>
+
+        <div style="height:12px"></div>
+        <div class="small" id="meta">No data loaded.</div>
+
+        <div style="height:12px"></div>
+        <div style="max-height: 68vh; overflow:auto; border-radius:14px;">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>SKU</th><th>Title</th><th>Status</th><th>Location</th><th>Price</th><th>Notes</th>
+              </tr>
+            </thead>
+            <tbody id="tbody"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </main>
+
+<script src="./app.js"></script>
+<script>
+qs("#logo").src = "https://raw.githubusercontent.com/tekpakinc/tekpak-site/b8d52da6ac61c4f06d12cd8b9253cb6103b8dad9/tekpak-logo.png";
+
+async function load(){
+  const tab = qs("#tabSel").value;
+  const q = qs("#q").value.trim();
+  try{
+    const data = await apiGet({ action:"listInventory", tab, q });
+    const sellable = data.items.filter(it => isSellableStatus(it.Status));
+    qs("#meta").textContent = `Showing ${sellable.length} sellable item(s) from ${tab}.`;
+
+    qs("#tbody").innerHTML = sellable.map(it => {
+      const st = String(it.Status||"").toUpperCase();
+      const cls = isSellableStatus(st) ? "good" : "warn";
+      return `<tr>
+        <td class="mono">${escHtml(it.TP_SKU || "")}</td>
+        <td>${escHtml(it.Title || "")}</td>
+        <td><span class="pill ${cls}">${escHtml(st)}</span></td>
+        <td class="mono">${escHtml(it.Yard_Location || "")}</td>
+        <td>${escHtml(it.List_Price || "")}</td>
+        <td>${escHtml(it.Cosmetic_Notes || it.Notes_Internal || "")}</td>
+      </tr>`;
+    }).join("");
+    toast("Store view loaded.");
+  }catch(err){
+    toast(err.message,"bad");
+  }
+}
+
+qs("#btnLoad").addEventListener("click", load);
+qs("#q").addEventListener("keydown", (e)=>{ if(e.key==="Enter") load(); });
+load();
+</script>
+</body>
+</html>
